<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="#F1F1F1"
        android:id="@+id/main1"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/Students"
            android:hint="@string/student_s_name"
            android:textColor="@color/black"
            android:padding="16dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/see"
            android:id="@+id/See"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/main2"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Subject"
                android:textSize="16sp"
                android:padding="4dp"
                android:textStyle="bold"
                android:id="@+id/Subject"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cat"
                android:textSize="16sp"
                android:padding="4dp"
                android:textStyle="bold"
                android:id="@+id/Cat"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Exam"
                android:padding="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/Exam"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Marks"
                android:padding="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/Marks"
                />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>