<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:src="@drawable/profile"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/james_mutuma"
                android:padding="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/name"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/jamemutuma38_gmail_com"
                android:textSize="16sp"
                android:padding="4dp"
                android:textStyle="bold"
                android:id="@+id/email"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/_254748030376"
                android:textSize="16sp"
                android:padding="4dp"
                android:textStyle="bold"
                android:id="@+id/phone"
                android:layout_height="wrap_content"/>


        </LinearLayout>



    </LinearLayout>
</LinearLayout>
